--- a/public/login_naver.html
+++ b/public/login_naver.html
@@ -12,7 +12,7 @@
 	var naverLogin = new naver.LoginWithNaverId(
 		{
 			clientId: "B4eKBlrEYU5z25BKMXEH",
-			callbackUrl: "http://blogvillain.com:3000/auth/login",
+			callbackUrl: "http://www.blogvillain.com:3000/auth/login",
 			isPopup: false, /* 팝업을 통한 연동처리 여부 */
 			loginButton: {color: "green", type: 3, height: 60} /* 로그인 버튼의 타입을 지정 */
 		}
